put blog in subdirectory

--- a/output/pages/resources.html
+++ b/output/pages/resources.html
@@ -24,7 +24,7 @@
             })();
         </script>
         
-<link rel="canonical" href="/resources.html" />
+<link rel="canonical" href="/blog/resources.html" />
 
 
     </head>
@@ -33,11 +33,11 @@
             <h1 id="brand"><a href="/">SBCD Math 2 Int.</a></h1>
             <nav id="nav" role="navigation">
                 
-                <a href="/">Blog</a>
+                <a href="/blog/">Blog</a>
                 <a href="/pages/files.html">Files</a>
                 <a href="/pages/resources.html">Resources</a>
                 <a href="/pages/schedule.html">Schedule</a>
-                <a href="/tag/">[topics]</a>
+                <a href="/blog/tag/">[topics]</a>
             </nav>
         </header>
 
